Project

General

Profile

Actions

Bug #12793

closed

Warning.warn with non-string object

Bug #12793: Warning.warn with non-string object

Added by znz (Kazuhiro NISHIYAMA) almost 10 years ago. Updated almost 10 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.4.0dev (2016-09-27 trunk 56273) [x86_64-linux]
[ruby-core:77430]

Description

Warning.warn with non-string argument causes SEGV.
For example, Warning.warn nil.

Actions

Also available in: PDF Atom